Ajout lien vers historique passager

--- a/public/HTML/mon_compte.html
+++ b/public/HTML/mon_compte.html
@@ -46,6 +46,12 @@
                 </div>
         </div>
 
+        <div class="mt-4">
+          <a href="/HTML/historique.html" class="btn btn-primary">
+              Voir l'historique de mes trajets (en tant que passager)
+          </a>
+      </div>
+
         <div id="chauffeur-section" class="d-none">
              <hr>
              <h2 class="mt-4 mb-3">Espace Chauffeur</h2>
